--- a/sass/components/header/_header-contacts.scss
+++ b/sass/components/header/_header-contacts.scss
@@ -1,7 +1,18 @@
 .contacts {
-  display: flex;
-  color: $background-text-color;
-  margin-left: auto;
+  @media screen and(min-width:480px) {
+    display: none;
+  }
+  @media screen and(min-width:768px) {
+    display: flex;
+    color: $background-text-color;
+    margin-left: auto;
+  }
+  @media screen and(min-width:1200px) {
+    display: flex;
+    color: $background-text-color;
+    margin-left: auto;
+  }
+
   &.contacts__item:not(:last-child) {
     margin-right: 50px;
   }
@@ -39,9 +50,6 @@
   padding-top: 32px;
   padding-bottom: 32px;
   display: inline-flex;
-  align-items: center;
-  gap: 10px;
-  flex-direction: row-reverse;
   transition-property: color;
   transition-duration: 250ms;
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
@@ -49,6 +57,16 @@
   &:focus,
   &:hover {
     color: $brand-color;
+  }
+
+  @media screen and(min-width:768px) {
+    display: flex;
+    justify-content: center;
+  }
+  @media screen and(min-width:1200px) {
+    display: flex;
+    gap: 10px;
+    flex-direction: row-reverse;
   }
 }
 .navigation__link-contacts:nth-child(1) {
