--- a/sass/components/header/_main-header.scss
+++ b/sass/components/header/_main-header.scss
@@ -7,8 +7,10 @@
 }
 
 .header__container {
-  display: flex;
-  align-items: center;
-  padding-left: 15px;
-  padding-right: 15px;
+  @media screen and(min-width:768px) {
+    display: flex;
+    align-items: center;
+    padding-left: 15px;
+    padding-right: 15px;
+  }
 }
