--- a/css/main.css
+++ b/css/main.css
@@ -11,6 +11,15 @@
   overflow: hidden;
 }
 
+.hiden {
+  display: none;
+}
+@media screen and (min-width: 1200px) {
+  .hiden {
+    display: block;
+  }
+}
+
 body {
   font-family: "Roboto", sans-serif, serif;
   color: #000000;
@@ -64,9 +73,23 @@ img {
   }
 }
 
-.section {
-  padding-top: 94px;
-  padding-bottom: 94px;
+@media screen and (min-width: 480px) {
+  .section {
+    padding-top: 60px;
+    padding-bottom: 60px;
+  }
+}
+@media screen and (min-width: 768px) {
+  .section {
+    padding-top: 60px;
+    padding-bottom: 60px;
+  }
+}
+@media screen and (min-width: 1200px) {
+  .section {
+    padding-top: 94px;
+    padding-bottom: 94px;
+  }
 }
 
 .title {
@@ -115,7 +138,6 @@ img {
 
 @media screen and (min-width: 768px) {
   .navigation__link {
-    margin-right: 50px;
     position: relative;
     display: block;
     padding-top: 32px;
@@ -128,6 +150,11 @@ img {
 }
 .navigation__link:active, .navigation__link:focus, .navigation__link:hover {
   color: #2196f3;
+}
+@media screen and (min-width: 1200px) {
+  .navigation__link {
+    margin-right: 50px;
+  }
 }
 
 /* .header__navigation .navigation__link:hover,
@@ -231,7 +258,6 @@ img {
 @media screen and (min-width: 768px) {
   .navigation__link-contacts {
     display: flex;
-    justify-content: center;
   }
 }
 @media screen and (min-width: 1200px) {
@@ -265,11 +291,28 @@ img {
   letter-spacing: 0.06em;
   text-transform: uppercase;
   font-weight: 900;
-  font-size: 44px;
   line-height: 1.36;
   color: #ffffff;
-  width: 696px;
-  height: 120px;
+  font-size: 26px;
+}
+@media screen and (min-width: 480px) {
+  .order__text {
+    width: 360px;
+    height: 84px;
+  }
+}
+@media screen and (min-width: 768px) {
+  .order__text {
+    width: 360px;
+    height: 84px;
+  }
+}
+@media screen and (min-width: 1200px) {
+  .order__text {
+    width: 696px;
+    height: 120px;
+    font-size: 44px;
+  }
 }
 .order__button {
   display: block;
@@ -513,10 +556,12 @@ img {
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.advantages__list {
-  display: flex;
-  justify-content: center;
-  padding-left: 0;
+@media screen and (min-width: 1200px) {
+  .advantages__list {
+    display: flex;
+    justify-content: center;
+    padding-left: 0;
+  }
 }
 
 .advantages__description {
@@ -535,6 +580,11 @@ img {
   text-transform: uppercase;
   color: #212121;
 }
+@media screen and (max-width: 767px) {
+  .advantages__title {
+    text-align: center;
+  }
+}
 
 .advantages__container-icon {
   display: flex;
@@ -545,17 +595,28 @@ img {
   background-color: #f5f4fa;
 }
 
-.advantages__item {
-  width: 270px;
+@media screen and (min-width: 1200px) {
+  .advantages__item {
+    width: 270px;
+  }
 }
-.advantages__item:not(:last-child) {
-  margin-right: 30px;
+@media screen and (min-width: 1200px) {
+  .advantages__item:not(:last-child) {
+    margin-right: 30px;
+  }
 }
 
-.activity__list {
-  display: flex;
-  justify-content: center;
-  list-style-type: none;
+@media screen and (min-width: 480px) {
+  .activity__list {
+    display: none;
+  }
+}
+@media screen and (min-width: 1200px) {
+  .activity__list {
+    display: flex;
+    justify-content: center;
+    list-style-type: none;
+  }
 }
 
 .activity__item {
@@ -595,19 +656,50 @@ img {
   background-color: #f5f4fa;
 }
 
+@media screen and (min-width: 480px) {
+  .team__img {
+    width: 450px;
+    height: 460px;
+  }
+}
+@media screen and (min-width: 768px) {
+  .team__img {
+    width: 354px;
+    height: 374px;
+  }
+}
+@media screen and (min-width: 1200px) {
+  .team__img {
+    width: 270px;
+    height: 260px;
+  }
+}
+
 .team__thumb {
-  width: 270px;
   background-color: #ffffff;
   box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
   border-radius: 0px 0px 4px 4px;
 }
-.team__thumb:not(:last-child) {
-  margin-right: 30px;
+@media screen and (min-width: 1200px) {
+  .team__thumb {
+    width: 270px;
+  }
+  .team__thumb:not(:last-child) {
+    margin-right: 30px;
+  }
 }
 
-.team__list {
-  display: flex;
-  padding-left: 0;
+@media screen and (max-width: 767px) {
+  .team__container {
+    margin-bottom: 30px;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .team__list {
+    display: flex;
+    padding-left: 0;
+  }
 }
 
 .team__list .team__container {
@@ -673,22 +765,32 @@ img {
   margin-bottom: 50px;
 }
 
-.client__list {
-  display: flex;
-  align-items: center;
-  margin: 0;
+@media screen and (max-width: 767px) {
+  .client__list {
+    display: flex;
+    flex-wrap: wrap;
+    gap: 15px;
+    justify-content: center;
+  }
+}
+@media screen and (min-width: 1200px) {
+  .client__list {
+    display: flex;
+    align-items: center;
+    margin: 0;
+  }
 }
 
-.client__item:not(:last-child) {
-  margin-right: 30px;
+@media screen and (min-width: 1200px) {
+  .client__item:not(:last-child) {
+    margin-right: 30px;
+  }
 }
 
 .client__link {
   display: flex;
   justify-content: center;
   align-items: center;
-  width: 170px;
-  height: 92px;
   border: 1px solid #afb1b8;
   border-radius: 4px;
   color: #afb1b8;
@@ -700,6 +802,24 @@ img {
   color: #2196f3;
   border-color: #2196f3;
 }
+@media screen and (min-width: 480px) {
+  .client__link {
+    width: 210px;
+    height: 92px;
+  }
+}
+@media screen and (min-width: 768px) {
+  .client__link {
+    width: 226px;
+    height: 92px;
+  }
+}
+@media screen and (min-width: 1200px) {
+  .client__link {
+    width: 170px;
+    height: 92px;
+  }
+}
 
 .client__icon {
   fill: currentColor;
@@ -710,9 +830,25 @@ img {
   padding-bottom: 60px;
   background-color: #2f303a;
 }
-.footer__container {
-  display: flex;
-  align-items: baseline;
+@media screen and (max-width: 767px) {
+  .footer__container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    text-align: center;
+  }
+}
+@media screen and (min-width: 768px) {
+  .footer__container {
+    display: flex;
+    align-items: baseline;
+  }
+}
+@media screen and (min-width: 1200px) {
+  .footer__container {
+    display: flex;
+    align-items: baseline;
+  }
 }
 .footer__logo {
   display: block;
@@ -724,8 +860,15 @@ img {
   margin-bottom: 20px;
 }
 
-.footer__thumb {
-  margin-right: 70px;
+@media screen and (max-width: 767px) {
+  .footer__thumb {
+    margin-bottom: 60px;
+  }
+}
+@media screen and (min-width: 1200px) {
+  .footer__thumb {
+    margin-right: 70px;
+  }
 }
 
 .logo--wrap {
@@ -781,8 +924,15 @@ img {
   color: #ffffff;
 }
 
-.join__thumb {
-  margin-right: 93px;
+@media screen and (max-width: 767px) {
+  .join__thumb {
+    margin-bottom: 60px;
+  }
+}
+@media screen and (min-width: 1200px) {
+  .join__thumb {
+    margin-right: 93px;
+  }
 }
 
 .join__list {
@@ -816,9 +966,11 @@ img {
   fill: currentColor;
 }
 
-.subscribe {
-  display: flex;
-  flex-direction: column;
+@media screen and (min-width: 1200px) {
+  .subscribe {
+    display: flex;
+    flex-direction: column;
+  }
 }
 
 .subscribe__title {
@@ -830,10 +982,12 @@ img {
   color: #ffffff;
 }
 
-.subscribe__thumb {
-  display: flex;
-  align-items: center;
-  justify-content: center;
+@media screen and (min-width: 1200px) {
+  .subscribe__thumb {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+  }
 }
 
 .subscribe__input {
@@ -851,7 +1005,6 @@ img {
 }
 
 .subscribe__submit {
-  display: flex;
   align-items: center;
   text-align: center;
   padding: 10px 28px;
@@ -865,6 +1018,18 @@ img {
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
   border-radius: 4px;
   border: none;
+}
+@media screen and (min-width: 480px) {
+  .subscribe__submit {
+    display: flex;
+    margin-left: auto;
+    margin-right: auto;
+  }
+}
+@media screen and (min-width: 1200px) {
+  .subscribe__submit {
+    display: flex;
+  }
 }
 
 .subscribe__wrap {
