--- a/sass/components/footer/_adress.scss
+++ b/sass/components/footer/_adress.scss
@@ -4,8 +4,22 @@
   background-color: $background-color;
 
   &__container {
-    display: flex;
-    align-items: baseline;
+    @media screen and(max-width:767px) {
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      text-align: center;
+    }
+
+    @media screen and(min-width:768px) {
+      display: flex;
+      align-items: baseline;
+    }
+
+    @media screen and(min-width:1200px) {
+      display: flex;
+      align-items: baseline;
+    }
   }
 
   &__logo {
@@ -20,7 +34,13 @@
 }
 
 .footer__thumb {
-  margin-right: 70px;
+  @media screen and(max-width:767px) {
+    margin-bottom: 60px;
+  }
+
+  @media screen and(min-width:1200px) {
+    margin-right: 70px;
+  }
 }
 
 .logo--wrap {
