--- a/sass/components/footer/_join.scss
+++ b/sass/components/footer/_join.scss
@@ -7,7 +7,12 @@
 }
 
 .join__thumb {
-  margin-right: 93px;
+  @media screen and(max-width:767px) {
+    margin-bottom: 60px;
+  }
+  @media screen and(min-width:1200px) {
+    margin-right: 93px;
+  }
 }
 
 .join__list {
