--- a/sass/components/footer/_subscribe.scss
+++ b/sass/components/footer/_subscribe.scss
@@ -1,6 +1,14 @@
 .subscribe {
-  display: flex;
-  flex-direction: column;
+  @media screen and(min-width:480px) {
+  }
+
+  @media screen and(min-width:768px) {
+  }
+
+  @media screen and(min-width:1200px) {
+    display: flex;
+    flex-direction: column;
+  }
 }
 
 .subscribe__title {
@@ -14,9 +22,17 @@
 }
 
 .subscribe__thumb {
-  display: flex;
-  align-items: center;
-  justify-content: center;
+  @media screen and(min-width:480px) {
+  }
+
+  @media screen and(min-width:768px) {
+  }
+
+  @media screen and(min-width:1200px) {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+  }
 }
 
 .subscribe__input {
@@ -36,7 +52,6 @@
 }
 
 .subscribe__submit {
-  display: flex;
   align-items: center;
   text-align: center;
   padding: 10px 28px;
@@ -51,6 +66,15 @@
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
   border-radius: 4px;
   border: none;
+
+  @media screen and(min-width:480px) {
+    display: flex;
+    margin-left: auto;
+    margin-right: auto;
+  }
+  @media screen and(min-width:1200px) {
+    display: flex;
+  }
 }
 
 .subscribe__wrap {
