--- a/sass/components/main/_advantages.scss
+++ b/sass/components/main/_advantages.scss
@@ -1,7 +1,15 @@
 .advantages__list {
-  display: flex;
-  justify-content: center;
-  padding-left: 0;
+  @media screen and(min-width:480px) {
+  }
+
+  @media screen and(min-width:768px) {
+  }
+
+  @media screen and(min-width:1200px) {
+    display: flex;
+    justify-content: center;
+    padding-left: 0;
+  }
 }
 .advantages__description {
   font-size: 14px;
@@ -17,6 +25,10 @@
   letter-spacing: 0.03em;
   text-transform: uppercase;
   color: #212121;
+
+  @media screen and(max-width:767px) {
+    text-align: center;
+  }
 }
 .advantages__container-icon {
   display: flex;
@@ -27,8 +39,18 @@
   background-color: $less-white-for-bg;
 }
 .advantages__item {
-  width: 270px;
+  @media screen and(min-width:480px) {
+  }
+
+  @media screen and(min-width:768px) {
+  }
+
+  @media screen and(min-width:1200px) {
+    width: 270px;
+  }
   &:not(:last-child) {
-    margin-right: 30px;
+    @media screen and(min-width:1200px) {
+      margin-right: 30px;
+    }
   }
 }
