--- a/sass/components/main/_clients.scss
+++ b/sass/components/main/_clients.scss
@@ -10,21 +10,33 @@
 }
 
 .client__list {
-  display: flex;
-  align-items: center;
-  margin: 0;
+  @media screen and(max-width:767px) {
+    display: flex;
+    flex-wrap: wrap;
+    gap: 15px;
+    justify-content: center;
+  }
+
+  @media screen and(min-width:768px) {
+  }
+
+  @media screen and(min-width:1200px) {
+    display: flex;
+    align-items: center;
+    margin: 0;
+  }
 }
 
 .client__item:not(:last-child) {
-  margin-right: 30px;
+  @media screen and(min-width:1200px) {
+    margin-right: 30px;
+  }
 }
 
 .client__link {
   display: flex;
   justify-content: center;
   align-items: center;
-  width: 170px;
-  height: 92px;
   border: 1px solid #afb1b8;
   border-radius: 4px;
   color: #afb1b8;
@@ -36,6 +48,21 @@
   &:focus {
     color: $brand-color;
     border-color: $brand-color;
+  }
+
+  @media screen and(min-width:480px) {
+    width: 210px;
+    height: 92px;
+  }
+
+  @media screen and(min-width:768px) {
+    width: 226px;
+    height: 92px;
+  }
+
+  @media screen and(min-width:1200px) {
+    width: 170px;
+    height: 92px;
   }
 }
 
