--- a/sass/components/main/_hero.scss
+++ b/sass/components/main/_hero.scss
@@ -18,11 +18,25 @@
     letter-spacing: 0.06em;
     text-transform: uppercase;
     font-weight: 900;
-    font-size: 44px;
     line-height: 1.36;
     color: $white-text-color;
-    width: 696px;
-    height: 120px;
+    font-size: 26px;
+
+    @media screen and(min-width:480px) {
+      width: 360px;
+      height: 84px;
+    }
+
+    @media screen and(min-width:768px) {
+      width: 360px;
+      height: 84px;
+    }
+
+    @media screen and(min-width:1200px) {
+      width: 696px;
+      height: 120px;
+      font-size: 44px;
+    }
   }
 
   &__button {
