--- a/sass/components/main/team/_team-content.scss
+++ b/sass/components/main/team/_team-content.scss
@@ -1,22 +1,49 @@
 .team {
   background-color: $less-white-for-bg;
 }
+.team__img {
+  @media screen and(min-width:480px) {
+    width: 450px;
+    height: 460px;
+  }
+
+  @media screen and(min-width:768px) {
+    width: 354px;
+    height: 374px;
+  }
+
+  @media screen and(min-width:1200px) {
+    width: 270px;
+    height: 260px;
+  }
+}
 
 .team__thumb {
-  width: 270px;
   background-color: $white-text-color;
   box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
     0px 2px 1px rgba(0, 0, 0, 0.2);
   border-radius: 0px 0px 4px 4px;
 
-  &:not(:last-child) {
-    margin-right: 30px;
+  @media screen and(min-width:1200px) {
+    width: 270px;
+
+    &:not(:last-child) {
+      margin-right: 30px;
+    }
+  }
+}
+
+.team__container {
+  @media screen and(max-width:767px) {
+    margin-bottom: 30px;
   }
 }
 
 .team__list {
-  display: flex;
-  padding-left: 0;
+  @media screen and(min-width:1200px) {
+    display: flex;
+    padding-left: 0;
+  }
 }
 
 .team__list .team__container {
