--- a/sass/utils/_visually-hidden.scss
+++ b/sass/utils/_visually-hidden.scss
@@ -10,3 +10,11 @@
   clip: rect(0 0 0 0);
   overflow: hidden;
 }
+
+.hiden {
+  display: none;
+
+  @media screen and(min-width:1200px) {
+    display: block;
+  }
+}
