--- a/css/main.css
+++ b/css/main.css
@@ -108,14 +108,15 @@ img {
   line-height: 1.14;
   letter-spacing: 0.02em;
   border-bottom: 1px solid #ececec;
+  padding: 0;
 }
 
 @media screen and (min-width: 768px) {
   .header__container {
     display: flex;
     align-items: center;
-    padding-left: 15px;
-    padding-right: 15px;
+    justify-content: space-between;
+    align-items: center;
   }
 }
 
@@ -194,16 +195,15 @@ img {
   color: #2196f3;
 }
 
-@media screen and (min-width: 480px) {
+@media screen and (max-width: 767px) {
   .contacts {
     display: none;
   }
 }
-@media screen and (min-width: 768px) {
+@media screen and (min-width: 768px) and (max-width: 1199px) {
   .contacts {
     display: flex;
-    color: #757575;
-    margin-left: auto;
+    flex-direction: column;
   }
 }
 @media screen and (min-width: 1200px) {
@@ -213,8 +213,16 @@ img {
     margin-left: auto;
   }
 }
-.contacts.contacts__item:not(:last-child) {
-  margin-right: 50px;
+
+@media screen and (min-width: 768px) {
+  .contacts__item:not(:last-child) {
+    margin: 0 0 10px 0;
+  }
+}
+@media screen and (min-width: 1200px) {
+  .contacts__item:not(:last-child) {
+    margin: 0 30px 0 0;
+  }
 }
 
 .contacts__icon {
@@ -222,6 +230,17 @@ img {
   height: 16px;
   content: "";
   fill: currentColor;
+}
+@media screen and (min-width: 768px) {
+  .contacts__icon {
+    display: inline-flex;
+    margin-right: 8px;
+  }
+}
+@media screen and (min-width: 1200px) {
+  .contacts__icon {
+    margin-right: 10px;
+  }
 }
 
 .studio {
@@ -245,8 +264,6 @@ img {
   font-size: 14px;
   line-height: 1.14;
   letter-spacing: 0.02em;
-  padding-top: 32px;
-  padding-bottom: 32px;
   display: inline-flex;
   transition-property: color;
   transition-duration: 250ms;
@@ -262,9 +279,9 @@ img {
 }
 @media screen and (min-width: 1200px) {
   .navigation__link-contacts {
+    padding-top: 32px;
+    padding-bottom: 32px;
     display: flex;
-    gap: 10px;
-    flex-direction: row-reverse;
   }
 }
 
@@ -556,6 +573,13 @@ img {
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 
+@media screen and (max-width: 1199px) {
+  .advantages__list {
+    display: flex;
+    flex-wrap: wrap;
+    gap: 30px;
+  }
+}
 @media screen and (min-width: 1200px) {
   .advantages__list {
     display: flex;
@@ -594,7 +618,18 @@ img {
   align-items: center;
   background-color: #f5f4fa;
 }
+@media screen and (max-width: 767px) {
+  .advantages__container-icon {
+    flex: calc((100% - 90px) / 2);
+  }
+}
 
+@media screen and (min-width: 768px) {
+  .advantages__item {
+    width: 100%;
+    flex: calc((100% - 90px) / 2);
+  }
+}
 @media screen and (min-width: 1200px) {
   .advantages__item {
     width: 270px;
@@ -679,6 +714,12 @@ img {
   background-color: #ffffff;
   box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
   border-radius: 0px 0px 4px 4px;
+  width: 100%;
+}
+@media screen and (max-width: 1199px) {
+  .team__thumb {
+    flex: calc(50% - 60px);
+  }
 }
 @media screen and (min-width: 1200px) {
   .team__thumb {
@@ -695,6 +736,13 @@ img {
   }
 }
 
+@media screen and (max-width: 1199px) {
+  .team__list {
+    display: flex;
+    gap: 30px;
+    flex-wrap: wrap;
+  }
+}
 @media screen and (min-width: 1200px) {
   .team__list {
     display: flex;
@@ -773,11 +821,25 @@ img {
     justify-content: center;
   }
 }
+@media screen and (max-width: 1199px) {
+  .client__list {
+    display: flex;
+    gap: 30px;
+    justify-content: space-between;
+    flex-wrap: wrap;
+  }
+}
 @media screen and (min-width: 1200px) {
   .client__list {
     display: flex;
     align-items: center;
     margin: 0;
+  }
+}
+
+@media screen and (min-width: 780px) {
+  .client__item {
+    flex-basis: calc((100% - 90px) / 3);
   }
 }
 
@@ -832,16 +894,8 @@ img {
 }
 @media screen and (max-width: 767px) {
   .footer__container {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
+    display: block;
     text-align: center;
-  }
-}
-@media screen and (min-width: 768px) {
-  .footer__container {
-    display: flex;
-    align-items: baseline;
   }
 }
 @media screen and (min-width: 1200px) {
@@ -993,7 +1047,6 @@ img {
 .subscribe__input {
   width: 358px;
   height: 50px;
-  margin-right: 12px;
   padding-top: 12px;
   padding-bottom: 12px;
   padding-left: 16px;
@@ -1002,6 +1055,17 @@ img {
   filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.15));
   border-radius: 4px;
   background-color: #2f303a;
+}
+@media screen and (max-width: 767px) {
+  .subscribe__input {
+    margin-top: 20px;
+    margin-bottom: 20px;
+  }
+}
+@media screen and (min-width: 1200px) {
+  .subscribe__input {
+    margin-right: 12px;
+  }
 }
 
 .subscribe__submit {
