--- a/sass/components/footer/_adress.scss
+++ b/sass/components/footer/_adress.scss
@@ -5,15 +5,8 @@
 
   &__container {
     @media screen and(max-width:767px) {
-      display: flex;
-      flex-direction: column;
-      align-items: center;
+      display: block;
       text-align: center;
-    }
-
-    @media screen and(min-width:768px) {
-      display: flex;
-      align-items: baseline;
     }
 
     @media screen and(min-width:1200px) {
