--- a/sass/components/footer/_subscribe.scss
+++ b/sass/components/footer/_subscribe.scss
@@ -38,7 +38,7 @@
 .subscribe__input {
   width: 358px;
   height: 50px;
-  margin-right: 12px;
+
   padding-top: 12px;
   padding-bottom: 12px;
   padding-left: 16px;
@@ -49,6 +49,15 @@
   border-radius: 4px;
 
   background-color: $background-color;
+
+  @media screen and(max-width:767px) {
+    margin-top: 20px;
+    margin-bottom: 20px;
+  }
+
+  @media screen and(min-width:1200px) {
+    margin-right: 12px;
+  }
 }
 
 .subscribe__submit {
@@ -72,6 +81,7 @@
     margin-left: auto;
     margin-right: auto;
   }
+
   @media screen and(min-width:1200px) {
     display: flex;
   }
