--- a/sass/components/header/_header-contacts.scss
+++ b/sass/components/header/_header-contacts.scss
@@ -1,20 +1,29 @@
 .contacts {
-  @media screen and(min-width:480px) {
+  @media screen and(max-width:767px) {
     display: none;
   }
-  @media screen and(min-width:768px) {
+  @media screen and(min-width:768px) and(max-width:1199px) {
     display: flex;
-    color: $background-text-color;
-    margin-left: auto;
+    flex-direction: column;
   }
   @media screen and(min-width:1200px) {
     display: flex;
     color: $background-text-color;
     margin-left: auto;
   }
+}
 
-  &.contacts__item:not(:last-child) {
-    margin-right: 50px;
+.contacts__item {
+  @media screen and (min-width: 768px) {
+    &:not(:last-child) {
+      margin: 0 0 10px 0;
+    }
+  }
+
+  @media screen and (min-width: 1200px) {
+    &:not(:last-child) {
+      margin: 0 30px 0 0;
+    }
   }
 }
 
@@ -23,6 +32,15 @@
   height: 16px;
   content: '';
   fill: currentColor;
+  @media screen and (min-width: 768px) {
+    display: inline-flex;
+
+    margin-right: 8px;
+  }
+
+  @media screen and (min-width: 1200px) {
+    margin-right: 10px;
+  }
 }
 
 .studio {
@@ -47,8 +65,7 @@
   font-size: 14px;
   line-height: 1.14;
   letter-spacing: 0.02em;
-  padding-top: 32px;
-  padding-bottom: 32px;
+
   display: inline-flex;
   transition-property: color;
   transition-duration: 250ms;
@@ -62,10 +79,11 @@
   @media screen and(min-width:768px) {
     display: flex;
   }
+
   @media screen and(min-width:1200px) {
+    padding-top: 32px;
+    padding-bottom: 32px;
     display: flex;
-    gap: 10px;
-    flex-direction: row-reverse;
   }
 }
 .navigation__link-contacts:nth-child(1) {
