--- a/sass/components/header/_main-header.scss
+++ b/sass/components/header/_main-header.scss
@@ -4,13 +4,16 @@
   line-height: 1.14;
   letter-spacing: 0.02em;
   border-bottom: 1px solid #ececec;
+  padding: 0;
 }
 
 .header__container {
   @media screen and(min-width:768px) {
     display: flex;
     align-items: center;
-    padding-left: 15px;
-    padding-right: 15px;
+
+    justify-content: space-between;
+
+    align-items: center;
   }
 }
