--- a/sass/components/main/_advantages.scss
+++ b/sass/components/main/_advantages.scss
@@ -2,7 +2,10 @@
   @media screen and(min-width:480px) {
   }
 
-  @media screen and(min-width:768px) {
+  @media screen and(max-width:1199px) {
+    display: flex;
+    flex-wrap: wrap;
+    gap: 30px;
   }
 
   @media screen and(min-width:1200px) {
@@ -30,6 +33,7 @@
     text-align: center;
   }
 }
+
 .advantages__container-icon {
   display: flex;
   height: 120px;
@@ -37,17 +41,25 @@
   justify-content: center;
   align-items: center;
   background-color: $less-white-for-bg;
+
+  @media screen and(max-width:767px) {
+    flex: calc((100% - 90px) / 2);
+  }
 }
+
 .advantages__item {
   @media screen and(min-width:480px) {
   }
 
   @media screen and(min-width:768px) {
+    width: 100%;
+    flex: calc((100% - 90px) / 2);
   }
 
   @media screen and(min-width:1200px) {
     width: 270px;
   }
+
   &:not(:last-child) {
     @media screen and(min-width:1200px) {
       margin-right: 30px;
