--- a/sass/components/main/_clients.scss
+++ b/sass/components/main/_clients.scss
@@ -17,13 +17,23 @@
     justify-content: center;
   }
 
-  @media screen and(min-width:768px) {
+  @media screen and(max-width:1199px) {
+    display: flex;
+    gap: 30px;
+    justify-content: space-between;
+    flex-wrap: wrap;
   }
 
   @media screen and(min-width:1200px) {
     display: flex;
     align-items: center;
     margin: 0;
+  }
+}
+
+.client__item {
+  @media screen and(min-width:780px) {
+    flex-basis: calc((100% - 90px) / 3);
   }
 }
 
