--- a/sass/components/main/team/_team-content.scss
+++ b/sass/components/main/team/_team-content.scss
@@ -23,7 +23,11 @@
   box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
     0px 2px 1px rgba(0, 0, 0, 0.2);
   border-radius: 0px 0px 4px 4px;
+  width: 100%;
 
+  @media screen and(max-width:1199px) {
+    flex: calc(50% - 60px);
+  }
   @media screen and(min-width:1200px) {
     width: 270px;
 
@@ -40,6 +44,13 @@
 }
 
 .team__list {
+  @media screen and(min-width:480px) {
+  }
+  @media screen and(max-width:1199px) {
+    display: flex;
+    gap: 30px;
+    flex-wrap: wrap;
+  }
   @media screen and(min-width:1200px) {
     display: flex;
     padding-left: 0;
