--- a/sass/components/footer/_adress.scss
+++ b/sass/components/footer/_adress.scss
@@ -1,45 +1,63 @@
 .footer {
   padding-top: 60px;
   padding-bottom: 60px;
-  background-color: $background-color;
-
-  &__container {
-    @media screen and(max-width:767px) {
-      display: block;
-      text-align: center;
-    }
-
-    @media screen and(min-width:1200px) {
-      display: flex;
-      align-items: baseline;
-    }
-  }
+  background: $background-color;
 
   &__logo {
-    display: block;
-    font-family: 'Raleway';
-    font-size: 26px;
-    line-height: 1.19;
-    letter-spacing: 0.03em;
-    color: $white-text-color;
     margin-bottom: 20px;
+
+    font-family: 'Raleway', sans-serif;
+    font-weight: 700;
+    font-size: 24px;
+    letter-spacing: 0.03em;
+    line-height: 1.17;
+    color: $color-icon;
   }
 }
 
-.footer__thumb {
-  @media screen and(max-width:767px) {
+.footer__address {
+  font-style: normal;
+}
+
+@media screen and (max-width: 1199px) {
+  .footer__thumb {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
     margin-bottom: 60px;
   }
+}
 
-  @media screen and(min-width:1200px) {
-    margin-right: 70px;
+.footer__desc {
+  font-size: 14px;
+  line-height: 1.71;
+  letter-spacing: 0.03em;
+}
+
+.footer__desc,
+.contact-link-footer {
+  margin-bottom: 8px;
+  color: $color-icon;
+}
+
+.footer__list {
+  @media screen and (max-width: 1199px) {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
   }
 }
+.footer__link {
+  color: $mail-color;
+  transition-property: color;
+  transition-duration: 250ms;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 
-.logo--wrap {
-  color: $brand-color;
+  &:hover,
+  &:focus {
+    color: $brand-color;
+  }
 }
-
 .footer__address {
   font-style: normal;
   font-size: 14px;
@@ -47,40 +65,53 @@
   letter-spacing: 0.03em;
   font-weight: 400;
 }
-
-.footer__desc {
-  color: $white-text-color;
-  font-size: 14px;
-  line-height: 1.46;
-  letter-spacing: 0.03em;
-  font-weight: 400;
-  margin-bottom: 9px;
-}
-
-.footer__list.footer__item:not(:last-child) {
-  margin-bottom: 9px;
-}
-
-.footer__link:link {
-  text-decoration: $off-text-decoration;
-  color: $mail-color;
-
-  &:active {
-    text-decoration: $off-text-decoration;
-    color: rgba(255, 255, 255, 0.6);
-  }
-
-  &:hover {
-    text-decoration: $off-text-decoration;
-    color: $brand-color;
-  }
-
-  &:focus {
-    text-decoration: $off-text-decoration;
-    color: $brand-color;
-  }
-}
-
 .footer__item:not(:last-child) {
-  margin-bottom: 9px;
+  margin-bottom: 8px;
+}
+
+// -----------------------------TABLET STYLES-------------------
+@media screen and (min-width: 768px) and (max-width: 1199px) {
+  .footer__container {
+    display: flex;
+    flex-wrap: wrap;
+    flex-direction: row;
+    justify-content: space-around;
+  }
+}
+
+// -----------------------------DESKTOP STYLES-------------------
+@media screen and (min-width: 1200px) {
+  .footer {
+    &__container {
+      display: flex;
+      align-items: baseline;
+    }
+
+    &__logo {
+      font-size: 26px;
+      line-height: 1.19;
+    }
+  }
+
+  .footer__address {
+    font-style: normal;
+    width: 231px;
+    margin-right: 70px;
+  }
+
+  .footer__desc,
+  .contact-link-footer {
+    font-size: 14px;
+    line-height: 1.71;
+    letter-spacing: 0.03em;
+  }
+
+  .footer__desc {
+    margin-bottom: 9px;
+    color: $color-icon;
+  }
+
+  .footer__item:not(:last-child) {
+    margin-bottom: 9px;
+  }
 }
