--- a/sass/components/footer/_subscribe.scss
+++ b/sass/components/footer/_subscribe.scss
@@ -1,92 +1,91 @@
-.subscribe {
-  @media screen and(min-width:480px) {
-  }
-
-  @media screen and(min-width:768px) {
-  }
-
-  @media screen and(min-width:1200px) {
-    display: flex;
-    flex-direction: column;
-  }
-}
-
 .subscribe__title {
+  display: block;
   margin-bottom: 20px;
   font-weight: 700;
+  font-size: 14px;
   line-height: 1.16;
   letter-spacing: 0.03em;
   text-transform: uppercase;
+  color: $color-icon;
 
-  color: $white-text-color;
+  @media screen and (max-width: 1199px) {
+    text-align: center;
+  }
 }
 
 .subscribe__thumb {
-  @media screen and(min-width:480px) {
-  }
-
-  @media screen and(min-width:768px) {
-  }
-
-  @media screen and(min-width:1200px) {
+  @media screen and (max-width: 1199px) {
     display: flex;
+    flex-direction: column;
     align-items: center;
-    justify-content: center;
   }
 }
 
 .subscribe__input {
-  width: 358px;
+  display: block;
+  width: 100%;
   height: 50px;
-
   padding-top: 12px;
   padding-bottom: 12px;
   padding-left: 16px;
   color: rgba(255, 255, 255, 0.6);
-
   border: 1px solid rgba(255, 255, 255, 0.3);
   filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.15));
   border-radius: 4px;
-
   background-color: $background-color;
 
-  @media screen and(max-width:767px) {
-    margin-top: 20px;
+  @media screen and (max-width: 1199px) {
     margin-bottom: 20px;
   }
 
-  @media screen and(min-width:1200px) {
-    margin-right: 12px;
+  @media screen and (min-width: 768px) and (max-width: 1199px) {
+    width: 450px;
   }
 }
 
 .subscribe__submit {
+  display: flex;
   align-items: center;
   text-align: center;
   padding: 10px 28px;
-  cursor: pointer;
 
-  color: $white-text-color;
+  color: #ffffff;
   font-weight: 700;
   font-size: 16px;
   line-height: 1.88;
   letter-spacing: 0.06em;
-  background: $brand-color;
+  background: #2196f3;
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
   border-radius: 4px;
   border: none;
-
-  @media screen and(min-width:480px) {
-    display: flex;
-    margin-left: auto;
-    margin-right: auto;
-  }
-
-  @media screen and(min-width:1200px) {
-    display: flex;
-  }
 }
 
-.subscribe__wrap {
+.subscribe__wrapp {
   margin-right: 10px;
+}
+
+@media screen and (min-width: 1200px) {
+  .subscribe {
+    display: flex;
+    flex-direction: column;
+
+    margin-left: 93px;
+  }
+
+  .subscribe__thumb {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+  }
+
+  .subscribe__input {
+    width: 358px;
+    height: 50px;
+    margin-right: 12px;
+  }
+
+  .subscribe__submit {
+    width: 200px;
+    height: 50px;
+  }
 }
