--- a/sass/components/header/_navigation.scss
+++ b/sass/components/header/_navigation.scss
@@ -8,7 +8,7 @@
 }
 
 .navigation__item:not(:last-child) {
-  @media screen and(min-width:768px) {
+  @media screen and(max-width:1199px) {
     margin-right: 50px;
   }
 }
@@ -19,6 +19,7 @@
     display: block;
     padding-top: 32px;
     padding-bottom: 32px;
+
     color: $product-text-color;
     transition-property: color;
     transition-duration: 250ms;
