--- a/sass/components/main/_hero.scss
+++ b/sass/components/main/_hero.scss
@@ -1,16 +1,28 @@
 .order {
-  max-width: 1600px;
-  height: 600px;
+  max-width: 480px;
+  height: 400px;
   margin-left: auto;
   margin-right: auto;
+  padding-top: 118px;
+  padding-bottom: 60x;
+  text-align: center;
+
   background: $background-color;
   background-image: linear-gradient(to right, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)),
-    url('../images/backgoundImg.jpg');
-  background-repeat: no-repeat;
+    url('../images/mobile/hero.png');
   background-position: center;
-  padding-top: 200px;
-  padding-bottom: 200px;
-  text-align: center;
+  background-repeat: no-repeat;
+  @media (min-device-pixel-ratio: 2), (min-resolution: 192dpi), (min-resolution: 2dppx) {
+    background-image: linear-gradient(to right, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)),
+      url('../images/mobile/hero@2x.png');
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+  }
+
+  @media screen and (max-width: 365px) {
+    padding: 100px 10px;
+  }
 
   &__text {
     box-sizing: border-box;
@@ -60,5 +72,51 @@
   }
   &__btn:active {
     background-color: $brand-color;
+  }
+}
+
+.order {
+  max-width: 768px;
+  height: 400px;
+  margin-left: auto;
+  margin-right: auto;
+
+  text-align: center;
+
+  background: $background-color;
+  background-image: linear-gradient(to right, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)),
+    url('../images/tablet/hero-tablet.png');
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: contain;
+  @media (min-device-pixel-ratio: 2), (min-resolution: 192dpi), (min-resolution: 2dppx) {
+    background-image: linear-gradient(to right, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)),
+      url('../images/tablet/hero-tablet@2x.png');
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .order {
+    max-width: 1600px;
+    height: 600px;
+    padding-top: 200px;
+    padding-bottom: 200px;
+    margin-left: auto;
+    margin-right: auto;
+
+    background-image: linear-gradient(to right, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)),
+      url('../images/Desktop/hero-desktop.png');
+    background-position: center;
+    background-repeat: no-repeat;
+    @media (min-device-pixel-ratio: 2), (min-resolution: 192dpi), (min-resolution: 2dppx) {
+      background-image: linear-gradient(to right, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)),
+        url('../images/Desktop/hero-desktop@2x.png');
+      background-position: center;
+      background-repeat: no-repeat;
+      background-size: cover;
+    }
   }
 }
