--- a/sass/components/main/_hero.scss
+++ b/sass/components/main/_hero.scss
@@ -4,7 +4,7 @@
   margin-left: auto;
   margin-right: auto;
   padding-top: 118px;
-  padding-bottom: 60x;
+  padding-bottom: 60px;
   text-align: center;
 
   background: $background-color;
@@ -53,9 +53,10 @@
 
   &__button {
     display: block;
-    height: 50px;
-    width: 216px;
-    margin: 0 auto 30px auto;
+    margin-right: auto;
+    margin-left: auto;
+    padding: 10px 24px;
+
     background: $brand-color;
     box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
     border-radius: 4px;
@@ -75,26 +76,34 @@
   }
 }
 
-.order {
-  max-width: 768px;
-  height: 400px;
-  margin-left: auto;
-  margin-right: auto;
+@media screen and (min-width: 768px) {
+  .order {
+    display: block;
+    max-width: 750px;
+    height: 400px;
+    margin-left: auto;
+    margin-right: auto;
 
-  text-align: center;
+    text-align: center;
 
-  background: $background-color;
-  background-image: linear-gradient(to right, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)),
-    url('../images/tablet/hero-tablet.png');
-  background-position: center;
-  background-repeat: no-repeat;
-  background-size: contain;
-  @media (min-device-pixel-ratio: 2), (min-resolution: 192dpi), (min-resolution: 2dppx) {
+    background: $background-color;
     background-image: linear-gradient(to right, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)),
-      url('../images/tablet/hero-tablet@2x.png');
+      url('../images/tablet/hero-tablet.png');
     background-position: center;
     background-repeat: no-repeat;
-    background-size: cover;
+    background-size: contain;
+    @media (min-device-pixel-ratio: 2), (min-resolution: 192dpi), (min-resolution: 2dppx) {
+      background-image: linear-gradient(to right, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)),
+        url('../images/tablet/hero-tablet@2x.png');
+      background-position: center;
+      background-repeat: no-repeat;
+      background-size: cover;
+    }
+
+    &__text {
+      width: 360px;
+      height: 84px;
+    }
   }
 }
 
@@ -111,12 +120,25 @@
       url('../images/Desktop/hero-desktop.png');
     background-position: center;
     background-repeat: no-repeat;
+
     @media (min-device-pixel-ratio: 2), (min-resolution: 192dpi), (min-resolution: 2dppx) {
       background-image: linear-gradient(to right, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)),
         url('../images/Desktop/hero-desktop@2x.png');
       background-position: center;
       background-repeat: no-repeat;
       background-size: cover;
+    }
+
+    &__text {
+      display: block;
+      height: 120px;
+      width: 696px;
+      font-size: 44px;
+      line-height: 1.36;
+    }
+
+    &__button {
+      padding: 10px 32px;
     }
   }
 }
