--- a/sass/main.scss
+++ b/sass/main.scss
@@ -5,6 +5,8 @@
 @import './components/container';
 @import './components/title';
 
+@import './components/header/mobile-navigation';
+
 @import './components/header/main-header';
 @import './components/header/navigation';
 @import './components/header/logo';
