--- a/sass/components/header/_main-header.scss
+++ b/sass/components/header/_main-header.scss
@@ -5,15 +5,44 @@
   letter-spacing: 0.02em;
   border-bottom: 1px solid #ececec;
   padding: 0;
+
+  @media screen and (min-width: 480px) {
+    padding-bot: 16px;
+  }
+  @media screen and (min-width: 768px) {
+    padding-top: 21px;
+  }
+
+  @media screen and (min-width: 1200px) {
+    padding-top: 24px;
+  }
 }
 
 .header__container {
-  @media screen and(min-width:768px) {
-    display: flex;
-    align-items: center;
+  display: flex;
+  align-items: center;
 
-    justify-content: space-between;
+  padding-left: 15px;
+  padding-right: 15px;
 
-    align-items: center;
+  // 480px+
+  @media screen and (min-width: 480px) {
+    width: 480px;
+    margin-left: auto;
+    margin-right: auto;
+  }
+
+  // 768px+
+  @media screen and (min-width: 768px) {
+    width: 768px;
+    margin-left: auto;
+    margin-right: auto;
+  }
+
+  // 1200px+
+  @media screen and (min-width: 1200px) {
+    width: 1200px;
+    margin-left: auto;
+    margin-right: auto;
   }
 }
