--- a/sass/utils/_variables.scss
+++ b/sass/utils/_variables.scss
@@ -11,3 +11,6 @@ $product-text-color: #212121;
 $mail-color: rgba(255, 255, 255, 0.6);
 $less-white-for-bg: #f5f4fa;
 $back-color-but: #f5f5f5;
+
+$transition-cubic: cubic-bezier(0.4, 0, 0.2, 1);
+$transition-time: 250ms;
