--- a/sass/components/footer/_adress.scss
+++ b/sass/components/footer/_adress.scss
@@ -27,7 +27,11 @@
     margin-bottom: 60px;
   }
 }
-
+.footer__thumb {
+  @media screen and (min-width: 1200px) {
+    margin-right: 70px;
+  }
+}
 .footer__desc {
   font-size: 14px;
   line-height: 1.71;
@@ -69,7 +73,6 @@
   margin-bottom: 8px;
 }
 
-// -----------------------------TABLET STYLES-------------------
 @media screen and (min-width: 768px) and (max-width: 1199px) {
   .footer__container {
     display: flex;
@@ -79,7 +82,6 @@
   }
 }
 
-// -----------------------------DESKTOP STYLES-------------------
 @media screen and (min-width: 1200px) {
   .footer {
     &__container {
@@ -96,7 +98,6 @@
   .footer__address {
     font-style: normal;
     width: 231px;
-    margin-right: 70px;
   }
 
   .footer__desc,
