--- a/sass/components/footer/_join.scss
+++ b/sass/components/footer/_join.scss
@@ -1,10 +1,7 @@
 .join__thumb {
   @media screen and (max-width: 1199px) {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
+    text-align: center;
     margin-bottom: 60px;
-    margin-right: auto;
   }
 }
 
