--- a/sass/components/header/_main-header.scss
+++ b/sass/components/header/_main-header.scss
@@ -6,11 +6,9 @@
   border-bottom: 1px solid #ececec;
   padding: 0;
 
-  @media screen and (min-width: 480px) {
-    padding-bot: 16px;
-  }
-  @media screen and (max-width: 1199px) {
-    padding-top: 21px;
+  @media screen and (max-width: 767px) {
+    padding-top: 16px;
+    padding-bottom: 16px;
   }
 
   @media screen and (min-width: 1200px) {
