--- a/sass/components/header/_mobile-navigation.scss
+++ b/sass/components/header/_mobile-navigation.scss
@@ -113,10 +113,17 @@
   }
 
   .mobile-social__item:not(:last-child) {
-    padding-right: 10px;
+    position: relative;
+  }
+  .mobile-social__item:not(:last-child)::after {
+    position: absolute;
+    right: -10px;
+    content: '';
+    height: 100%;
     border-right: 1px solid rgba(33, 33, 33, 0.2);
-    @media screen and (max-width: 430px) {
-      padding-right: 5px;
+
+    @media screen and (max-width: 437px) {
+      right: -2.5px;
     }
   }
 
