--- a/sass/components/main/_hero.scss
+++ b/sass/components/main/_hero.scss
@@ -91,7 +91,7 @@
       url('../images/tablet/hero-tablet.png');
     background-position: center;
     background-repeat: no-repeat;
-    background-size: contain;
+    background-size: cover;
     @media (min-device-pixel-ratio: 2), (min-resolution: 192dpi), (min-resolution: 2dppx) {
       background-image: linear-gradient(to right, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)),
         url('../images/tablet/hero-tablet@2x.png');
